--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *, *::before, *::after{
     box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.5rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.2rem;
 }
 
 :root{
@@ -17,8 +17,9 @@ body{
     display: flex;
     width: 100vw;
     height: 100vh;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
     background-color: hsl(var(--hue), 100%, 20%);
 }
 
@@ -29,6 +30,7 @@ body.correct{
 body.wrong{
     --hue:var(--hue-wrong)
 }
+
 
 .container{
     width: 800px;
@@ -41,7 +43,7 @@ body.wrong{
 
 .btn-grid{
     display: grid;
-   grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(2, auto);
     gap: 10px;
     margin: 20px 0;
 }
